# ext_to_ego

./: .gitignore  calibration.npz  calibration.py  charuco.py  flash_cam_intrinsics.py  main.py  pyproject.toml  realsense_alignment.py  realsense_data_capture.py  realtime_segmentation.py  sam_aruco_tracker.py  sam_test.py  segmentation.py  setup.py  test_ext2ego.py  update_metadata.py  vision.py
config/: camera.yaml
