[project]
name = "ext-to-ego"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxscript>=0.7.0",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "sam2>=1.1.0",
    "scipy>=1.17.1",
    "tensorrt-cu12>=10.16.1.11",
    "torch>=2.0.0",
    "ultralytics>=8.4.47",
    "zarr>=3.0.0",
]
